# VirtualGamePad-PC

./: .clang-format  .editorconfig  .gitignore  .gitmodules  AGENTS.md  Build.md  CMakeLists.txt  CMakePresets.json  Doxyfile  README.MD  cmake_cache_linux.cmake  cmake_cache_linux.cmake.sample  cmake_cache_windows.cmake  cmake_cache_windows.cmake.sample  code-lint.ps1
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: generate_docs.yml
cmake/: AppImagePackaging.cmake  CppWinRT.cmake  LinuxInput.cmake  OpenSSFHardening.cmake  PortableNSIS.cmake  SignInstaller.cmake  create_msix.cmake
docs/: Build_8md.html  Colfer_8c.html  Colfer_8c.js  Colfer_8c__incl.map  Colfer_8c__incl.md5  Colfer_8h.html  Colfer_8h.js  Colfer_8h__dep__incl.map  Colfer_8h__dep__incl.md5  Colfer_8h__incl.map  Colfer_8h__incl.md5  GameButtons_8h.html  GameButtons_8h.js  GameButtons_8h__dep__incl.map  GameButtons_8h__dep__incl.md5  README_8MD.html  about_8cpp.html  about_8cpp__incl.map  about_8cpp__incl.md5  about_8hpp.html  about_8hpp.js  about_8hpp__dep__incl.map  about_8hpp__dep__incl.md5  about_8hpp__incl.map  about_8hpp__incl.md5  annotated.html  annotated_dup.js  appdir_8hpp.html  appdir_8hpp.js  appdir_8hpp__dep__incl.map  appdir_8hpp__dep__incl.md5  appdir_8hpp__incl.map  appdir_8hpp__incl.md5  badge_8cpp.html  badge_8cpp__incl.map  badge_8cpp__incl.md5  badge_8hpp.html  badge_8hpp.js  badge_8hpp__dep__incl.map  badge_8hpp__dep__incl.md5  (+518 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_b.js  classes_c.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enums_1.js  (+89 more)
res/: VGamepadPC.desktop  VGamepadPC.exe.manifest  icons.qrc
res/flatpak/: io.github.kitswas.VirtualGamePad-PC.appdata.xml  io.github.kitswas.VirtualGamePad-PC.yaml
src/: appdir.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  preferences.cpp  preferences.h  preferences.ui  settings.cpp  settings.h  settings.hpp  settings_key_variables.cpp  settings_key_variables.h  settings_key_variables.hpp
src/networking/: executor.cpp  executor.hpp  server.cpp  server.hpp  server.ui
src/platform/windows/: console.cpp  console.hpp
src/settings/: input_types.hpp  keymap_profile.cpp  keymap_profile.hpp  settings.hpp  settings_key_variables.cpp  settings_key_variables.hpp  settings_singleton.cpp  settings_singleton.hpp
src/simulation/: gamepadSim.cpp  gamepadSim.hpp  keyboardSim.cpp  keyboardSim.hpp  mouseSim.cpp  mouseSim.hpp  simulate.cpp  simulate.hpp
src/simulation/linux/: gamepadSim.cpp  keyboardSim.cpp  mouseSim.cpp
src/simulation/windows/: gamepadSim.cpp  keyboardSim.cpp  mouseSim.cpp
src/ui/: about.cpp  about.hpp  about.ui  badge.cpp  badge.hpp  buttoninputbox.cpp  buttoninputbox.hpp  mainmenu.cpp  mainmenu.hpp  mainmenu.ui  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  preferences.cpp  preferences.hpp  preferences.ui
